--- a/css/style.css
+++ b/css/style.css
@@ -703,7 +703,7 @@ ul.nav-icon {
 
 @media (max-width: 992px) {
   div#navbarSupportedContent {
-    background-color: #705f5f7a;
+    background-color: #2b3669;
     max-width: 100%;
     padding: 20px 0px;
     margin-top: 10px;
