--- a/css/style.css
+++ b/css/style.css
@@ -705,7 +705,7 @@ ul.nav-icon {
   div#navbarSupportedContent {
     background-color: #2b3669;
     max-width: 100%;
-    padding: 20px 0px;
+ padding: 0;
     margin-top: 10px;
     border-radius: 10px;
   }
@@ -714,6 +714,12 @@ ul.nav-icon {
   }
   .new-nav {
     top: 20px;
+  }
+  .navbar ul.ulNav{
+    margin-top: 30px ;
+  }
+  .navbar ul.ulNav2{
+    margin-bottom: 30px ;
   }
 }
 
